--- a/myStyle.css
+++ b/myStyle.css
@@ -115,3 +115,32 @@ body {
 .on-bright-cyan {
     padding-left: 50px
 }
+
+@media screen and (max-width: 700px) {
+    .price {
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .two-left-right-sides {
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        width:100%;
+    }
+    .on-dark-cyan {
+        width:100%;
+    }
+    .on-bright-cyan {
+        width:100%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .butn {
+        padding: 10px 30px;
+    }
+}
